--- a/assets/style.css
+++ b/assets/style.css
@@ -5,17 +5,18 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 100%;  
-  }
-  .background {
+    height: 100%;
+}
+
+.background {
     background: url(./images/background.jpg);
     background-repeat: no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 100vh;  
-  }
+    height: 100vh;
+}
 
 
 /* .navbar {
@@ -42,21 +43,23 @@
 }
 
 .section {
-    font-size:2em; color: white; 
+    font-size: 2em;
+    color: white;
     font-weight: bold;
     font-family: 'Major Mono Display', monospace
 }
+
 .main {
-    background-color: rgba(0,0,0,.5);
-    border: 10em, rgb(53, 52, 53); 
+    background-color: rgba(0, 0, 0, .5);
+    border: 10em, rgb(53, 52, 53);
     margin-top: 2em;
     margin-bottom: 3em;
-    color: white; 
+    color: white;
 }
 
 .main-contact {
     height: 70%;
-    border-bottom: 10px, rgba(0,0,0,.5);
+    border-bottom: 10px, rgba(0, 0, 0, .5);
 }
 
 p {
@@ -64,36 +67,37 @@ p {
 }
 
 .paragraph1 {
-    margin-left:0;
+    margin-left: 0;
     margin-right: .5em;
 }
 
 .paragraph2 {
-    margin-left:2em;
+    margin-left: 2em;
     padding-right: 5em;
 }
 
 .card {
-width: 18rem;
-min-height: 20rem;
-max-height: 20rem;
-margin-left:5rem;
+    width: 18rem;
+    min-height: 20rem;
+    max-height: 20rem;
+    margin-left: 5rem;
 }
 
 .profile {
-    max-width:30em;
-    max-height:12em; 
-    margin-left:15%;
+    max-width: 30em;
+    max-height: 12em;
+    margin-left: 15%;
 }
 
 footer {
-    background-color:  rgba(0,0,0,.5);
-    border-top: 1em,  rgb(53, 52, 53);
+    background-color: rgba(0, 0, 0, .5);
+    border-top: 1em, rgb(53, 52, 53);
     text-align: center;
     color: white;
     height: 5vh;
     margin-top: 1em;
 }
+
 .fab .fas {
     margin-right: 2px;
 }
@@ -103,97 +107,118 @@ footer {
         width: 18rem;
         min-height: 20rem;
         max-height: 20rem;
-        margin-left:0rem;
-        }
- }
+        margin-left: 0rem;
+    }
+}
 
 @media (max-width: 991.98px) {
     .card {
         width: 18rem;
         min-height: 20rem;
         max-height: 20rem;
-        }
+    }
 }
+
 .profile {
-    max-width:25em;
-    max-height:12em; 
-    margin-left:15%;
-    margin-right:15%;
+    max-width: 25em;
+    max-height: 12em;
+    margin-left: 15%;
+    margin-right: 15%;
 }
+
 .paragraph1 {
-    margin-left:7%;
+    margin-left: 7%;
 }
 
 @media (max-width: 767.98px) {
-.background {
-    background: url(./images/background.jpg);
-    background-repeat: no-repeat center center fixed;
-    height: 100%;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-  footer {
-    background-color:  rgba(0,0,0,.5);
-    border-top: 1em,  rgb(53, 52, 53);
-    text-align: center;
-    color: white;
-    height: 5%;
-    margin-top: 1em;
-}
-.profile {
-    max-width:25em;
-    max-height:12em; 
-    margin-left:30%;
-    margin-right:35%;
-}
-.main-contact {
-    height: 97vh;
-    border-bottom: 10px, rgba(0,0,0,.5);
-}
-.card {
-    width: 18rem;
-    margin-left:20%;
+    .background {
+        background: url(./images/background.jpg);
+        background-repeat: no-repeat center center fixed;
+        height: 100%;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
     }
+
+    footer {
+        background-color: rgba(0, 0, 0, .5);
+        border-top: 1em, rgb(53, 52, 53);
+        text-align: center;
+        color: white;
+        height: 5%;
+        margin-top: 1em;
+    }
+
+    .profile {
+        max-width: 25em;
+        max-height: 12em;
+        margin-left: 30%;
+        margin-right: 35%;
+    }
+
+    .main-contact {
+        height: 97vh;
+        border-bottom: 10px, rgba(0, 0, 0, .5);
+    }
+
+    .card {
+        width: 18rem;
+        margin-left: 20%;
+    }
+
     .paragraph2 {
-        margin-left:2em;
+        margin-left: 2em;
         padding-right: 2em;
     }
-  }
+}
 
 
 @media (max-width: 575.98px) {
-.card {
-    width: 18rem;
-    margin-left:2em;
+    .card {
+        width: 18rem;
+        margin-left: 2em;
     }
+
     .profile {
-        max-width:25em;
-        max-height:15em; 
-        margin-left:24%;
-        margin-right:35%;
+        max-width: 25em;
+        max-height: 15em;
+        margin-left: 20%;
+        margin-right: 30%;
         margin-bottom: 5%;
     }
+
     .paragraph2 {
-        margin-left:2em;
+        margin-left: 2em;
         padding-right: 0em;
     }
-  }
-  @media (max-width: 380.98px) {
+}
+
+@media (max-width: 380.98px) {
     .card {
         width: 16rem;
-        margin-left:2em;
+        margin-left: 2em;
+
+    }
+    .profile {
+        max-width: 15em;
+        max-height: 10em;
+        margin-left: 22%;
+        margin-right: 35%;
+        margin-bottom: 5%;
+    }
+
+    @media (max-width: 320.98px) {
+        .card {
+            width: 12rem;
+            margin-left: 2em;
 
         }
-        @media (max-width: 320.98px) {
-            .card {
-                width: 12rem;
-                margin-left:2em;
-        
-                }
-  }
-
-
-
-
+        .profile {
+            max-width: 15em;
+            max-height: 10em;
+            margin-left: 24%;
+            margin-right: 35%;
+            margin-bottom: 5%;
+        }
+    }
